재고 요구사항 리팩토링 - TDD=REFACTOR